# beaker-r-epitrix

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
examples/: example_10_1.md  example_10_1.md.metadata  example_10_2.md  example_10_2.md.metadata  example_10_3.md  example_10_3.md.metadata  example_10_4.md  example_10_4.md.metadata  example_10_5.md  example_10_5.md.metadata  example_10_6.md  example_10_6.md.metadata  example_10_7.md  example_10_7.md.metadata  example_11_1.md  example_11_1.md.metadata  example_11_2.md  example_11_2.md.metadata  example_11_3.md  example_11_3.md.metadata  example_11_4.md  example_11_4.md.metadata  example_12_1.md  example_12_1.md.metadata  example_12_2.md  example_12_2.md.metadata  example_13_1.md  example_13_1.md.metadata  example_13_2.md  example_13_2.md.metadata  example_14_1.md  example_14_1.md.metadata  example_15_1.md  example_15_1.md.metadata  example_16_1.md  example_16_1.md.metadata  example_16_2.md  example_16_2.md.metadata  example_17_1.md  example_17_1.md.metadata  (+74 more)
src/beaker_r_epitrix/: agent.py  context.py
