[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "beaker-r-epitrix"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "Matthew Printz", email = "matt@jataware.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

dependencies = [
    "beaker-bunsen>=0.0.5",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.hooks.bunsen]
require-runtime-dependencies = true

documentation_path = "documentation"
examples_path = "examples"
r_cran_libraries = [
  "epitrix",
]

[tool.hatch.build.hooks.bunsen.library_descriptions]
epitrix = "A library with functions that help with epidemology modeling"


[project.urls]
Documentation = "https://github.com/unknown/beaker-r-epitrix#readme"
Issues = "https://github.com/unknown/beaker-r-epitrix/issues"
Source = "https://github.com/unknown/beaker-r-epitrix"

[tool.hatch.version]
path = "src/beaker_r_epitrix/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/beaker_r_epitrix tests}"

[tool.coverage.run]
source_pkgs = ["beaker_r_epitrix", "tests"]
branch = true
parallel = true
omit = [
  "src/beaker_r_epitrix/__about__.py",
]

[tool.coverage.paths]
beaker_r_epitrix = ["src/beaker_r_epitrix", "*/beaker-r-epitrix/src/beaker_r_epitrix"]
tests = ["tests", "*/beaker-r-epitrix/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
